force-app/main/default/objects/Woodshop_Projects__c/Woodshop_Projects__c.object-meta.xml
<CustomObject>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship
Purpose:  This will have the main project records for Christopher&apos;s Woodshop</description>
    <label>Woodshop Projects</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Woodshop Projects Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Woodshop Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>