force-app/main/default/objects/Woodshop_Projects__c/fields/ProjectDescription__c.field-meta.xml
<CustomField>
    <fullName>ProjectDescription__c</fullName>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship 2021
Purpose:  A place to put a description of the project</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ProjectDescription</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>