force-app/main/default/objects/Woodshop_Projects__c/fields/Woodshop_Project_Blueprint__c.field-meta.xml
<CustomField>
    <fullName>Woodshop_Project_Blueprint__c</fullName>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship
Purpose:  Will be a place where Project Blueprints can be uploaded</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Woodshop Project Blueprint</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>