force-app/main/default/objects/Woodshop_Projects__c/fields/Woodshop_Project_Commission_Date__c.field-meta.xml
<CustomField>
    <fullName>Woodshop_Project_Commission_Date__c</fullName>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship 2021
Purpose:  Will give when the project was first commissioned.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Woodshop Project Commission Date</label>
    <type>Date</type>
</CustomField>