force-app/main/default/objects/Woodshop_Projects__c/fields/Woodshop_Project_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Woodshop_Project_End_Date__c</fullName>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship 2021
Purpose: Will give the end date for the woodshop project end date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Woodshop Project End Date</label>
    <type>Date</type>
</CustomField>