force-app/main/default/objects/Woodshop_Projects__c/fields/Woodshop_Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Woodshop_Project_Status__c</fullName>
    <description>Created By: HNS
Buisness Unit: Salesforce Oakland Apprenticeship
Purpose:  Will give project status stages during a woodshop project</description>
    <label>Woodshop Project Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Meeting</fullName>
            </value>
            <value>
                <fullName>Project Plan Created</fullName>
            </value>
            <value>
                <fullName>Project Plan Approved</fullName>
            </value>
            <value>
                <fullName>Build Started</fullName>
            </value>
            <value>
                <fullName>Initial Build Completed</fullName>
            </value>
            <value>
                <fullName>Initial Demo</fullName>
            </value>
            <value>
                <fullName>Revisions</fullName>
            </value>
            <value>
                <fullName>Demo with Revisions</fullName>
            </value>
            <value>
                <fullName>Project Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>